--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,5 +21,17 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <receiver
+                android:name="org.jboss.aerogear.android.unifiedpush.AeroGearGCMMessageReceiver"
+                android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
+                <category android:name="me.passos.talks.aerogear"/>
+            </intent-filter>
+            <meta-data android:name="DEFAULT_MESSAGE_HANDLER_KEY"
+                       android:value="me.passos.talks.aerogear.handler.NotifyingMessageHandler"/>
+        </receiver>
+
     </application>
 </manifest>
